fix(tags): content gap when using tags-content wrapper

--- a/theme/themes/eea/extras/tagList.less
+++ b/theme/themes/eea/extras/tagList.less
@@ -30,6 +30,12 @@
   gap: @tagsLabelsGap;
 }
 
+.tags-content {
+  gap: @tagsContentGap;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .tags.left {
   justify-content: left;
 }
